--- a/index.css
+++ b/index.css
@@ -1,11 +1,13 @@
 *{
-    margin: 0px;
-    padding: 0px;
+    margin: 0;
+    padding: 0;
     font-family: Avenir, sans-serif;
 }
 
-h1, nav {
-    text-align: center;
+
+body
+{
+    background-color: #F5F5F5;
 }
 
 nav ul {
@@ -22,6 +24,40 @@ nav ul li {
 footer
 {
     position: absolute;
-    bottom: 0px;
+    bottom: 0;
     width: 100%;
+}
+
+
+#buttons
+{
+    text-align: center;
+}
+
+#game-button
+{
+    border-radius: 50%;
+    width: 200px;
+    background: linear-gradient(to bottom right,  rgba(59,255,206,1) , rgba(137,125,242,1));
+    border: none;
+    padding: 60px;
+    margin: 20px;
+    color: white;
+    font-size: 24px;
+    opacity: 1;
+    transition: 0.6s;
+}
+
+
+#game-button:hover
+{
+    opacity: 0.7;
+}
+
+
+header nav p
+{
+    margin-top: 200px;
+    font-size: 30px;
+    text-align: center;
 }
