--- a/index.css
+++ b/index.css
@@ -1,4 +1,5 @@
-*{
+*
+{
     margin: 0;
     padding: 0;
     font-family: Avenir, sans-serif;
@@ -10,16 +11,19 @@ body
     background-color: #F5F5F5;
 }
 
+
 nav ul {
     list-style-type: none;
     display: flex;
 }
+
 
 nav ul li {
     flex: 1 1 auto;
     text-align: center;
     position: relative;
 }
+
 
 footer
 {
@@ -29,12 +33,34 @@ footer
 }
 
 
-#buttons
+#presentation
 {
+    font-size: 20px;
+    padding-top: 50px;
+    padding-bottom: 40px;
     text-align: center;
+    width: 400px;
+    margin: 0 auto;
 }
 
-#game-button
+
+#buttons
+{
+    display: flex;
+    flex-direction: row;
+}
+
+
+.game
+{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    min-width: 465px;
+}
+
+
+.game-button
 {
     border-radius: 50%;
     width: 200px;
@@ -49,15 +75,31 @@ footer
 }
 
 
-#game-button:hover
+.game-button:hover
 {
     opacity: 0.7;
 }
 
 
-header nav p
+.game-presentation
 {
-    margin-top: 200px;
-    font-size: 30px;
+    opacity: 0;
+    transition: visibility 0s, opacity 0.5s linear;
+    visibility: hidden;
+    font-size: 20px;
+}
+
+
+.game-button:hover + .game-presentation
+{
+    visibility: initial;
+    opacity: 1;
+}
+
+
+h1
+{
+    margin-top: 100px;
+    font-size: 40px;
     text-align: center;
 }
