--- a/form.css
+++ b/form.css
@@ -80,3 +80,28 @@ button:hover
 {
     background-color: rgb(158, 158, 158);
 }
+
+
+td
+{
+    text-align: center;
+    padding: 7px;
+}
+
+
+tr
+{
+    border-top: solid black 1px;
+}
+
+
+main
+{
+    display: flex;
+    flex-flow: column nowrap;
+    min-width: 500px;
+    padding: 10px;
+    background-color: white;
+    box-shadow: 2px 2px 3px rgb(100, 100, 100);
+    margin-bottom: 30px;
+}
