--- a/games/speed-typing/speed-typing.css
+++ b/games/speed-typing/speed-typing.css
@@ -3,15 +3,47 @@
     font-family: Avenir, sans-serif;
 }
 
+
+h1
+{
+    margin-top: 100px;
+    font-size: 40px;
+    text-align: center;
+}
+
+
 form, p
 {
     text-align: center;
+    font-size: 20px;
 }
+
 
 textarea
 {
     border: solid 2px gray;
 }
+
+
+#submit-button
+{
+    border-radius: 50%;
+    background: linear-gradient(to bottom right,  rgba(59,255,206,1) , rgba(137,125,242,1));
+    border: none;
+    padding: 20px;
+    margin: 20px;
+    color: white;
+    font-size: 20px;
+    opacity: 1;
+    transition: 0.6s;
+}
+
+
+#submit-button:hover
+{
+    opacity: 0.7;
+}
+
 
 footer
 {
@@ -19,6 +51,7 @@ footer
     bottom: 0;
     width: 100%;
 }
+
 
 nav ul li {
     flex: 1 1 auto;
