--- a/index.css
+++ b/index.css
@@ -1,30 +1,36 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,600&display=swap');
+
 /* Styles généraux */
 
 *{
     margin: 0;
     padding: 0;
-    font-family: Avenir, sans-serif;
+    font-family: 'Montserrat', sans-serif;
 }
 
 body{
-    background-color: #f0f0f0;
+    background-color: azure;
 }
 
 
 /* Style titre + présentation */
 
+header{
+    padding-top: 2%;
+    background: #c0dbff;
+}
+
 #presentation{
-    font-size: 20px;
-    padding-top: 50px;
-    padding-bottom: 40px;
+    font-size: 1em;
+    padding-top: 0.8%;
+    padding-bottom: 2%;
     text-align: center;
     max-width: 400px;
     margin: 0 auto;
 }
 
 h1{
-    margin-top: 100px;
-    font-size: 40px;
+    font-size: 2.2em;
     text-align: center;
 }
 
@@ -34,18 +40,6 @@ h1{
 nav{
     display: flex;
     flex-flow: row wrap;
-}
-
-
-/*Style appliqué au contenu du footer */
-
-footer{
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-}
-footer nav{
-    justify-content: space-around;
 }
 
 
@@ -61,10 +55,10 @@ footer nav{
     width: 200px;
     background: linear-gradient(to bottom right,  rgba(59,255,206,1) , rgba(137,125,242,1));
     border: none;
-    padding: 60px;
-    margin: 20px;
+    padding: 9%;
+    margin: 5%;
     color: white;
-    font-size: 24px;
+    font-size: 1.5em;
     opacity: 1;
     transition: 0.6s;
 }
@@ -77,10 +71,41 @@ footer nav{
     opacity: 0;
     transition: visibility 0s, opacity 0.5s linear;
     visibility: hidden;
-    font-size: 20px;
+    font-size: 1em;
 }
 
 .game-button:hover + .game-presentation{
     visibility: initial;
     opacity: 1;
+}
+
+
+/* Style du footer */
+
+footer{
+    background: #c0dbff;
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+}
+
+footer nav{
+    padding: 1.2%;
+    justify-content: space-around;
+    display: flex;
+    flex-flow: row wrap;
+}
+
+a{
+    outline: none;
+    text-decoration: none;
+    padding: 2px 1px 0;
+}
+
+a:link {
+    color: #004585;
+}
+
+a:visited {
+    color: #006e81;
 }
