--- a/index.css
+++ b/index.css
@@ -1,15 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,600&display=swap');
-
 /* Styles généraux */
 
 *{
     margin: 0;
     padding: 0;
-    font-family: 'Montserrat', sans-serif;
-}
-
-body{
-    background-color: azure;
+    font-family: Cochin, sans-serif;
 }
 
 
@@ -37,45 +31,87 @@ h1{
 
 /* Style appliqué aux boutons de jeu + au footer */
 
-nav{
+.games{
+    height: 600px;
     display: flex;
-    flex-flow: row wrap;
+    flex-wrap: nowrap;
+    overflow: auto;
+    margin-top: 20px;
 }
 
 
 /* Style sur les boutons de jeu */
 
 .game{
-    flex: 1 1;
-    text-align: center;
-}
-
-.game-button{
-    border-radius: 50%;
-    width: 200px;
-    background: linear-gradient(to bottom right,  rgba(59,255,206,1) , rgba(137,125,242,1));
-    border: none;
-    padding: 9%;
-    margin: 5%;
-    color: white;
-    font-size: 1.5em;
-    opacity: 1;
+    flex: 0 0 auto;
+    background-color: #e9e9e9;
+    width: 400px;
+    height: 500px;
+    margin: 20px;
     transition: 0.6s;
 }
 
-.game-button:hover{
+
+.game:hover{
+    transform:scale(1.1, 1.1)
+}
+
+
+.game-title{
+    font-size: 40px;
+    margin: 100px 20px 20px;
+}
+
+
+.game-presentation{
+    font-size: 20px;
+    margin: 10px 20px 20px;
+}
+
+
+.game-button-parent{
+    text-align: center;
+}
+
+
+.game-button{
+    margin: 50px;
+    font-size: 24px;
+    padding: 16px 30px;
+    text-decoration: none;
+    color: white;
+    background-color: #555555;
+    transition: all 0.6s;
+    cursor: pointer;
     opacity: 0.7;
 }
 
-.game-presentation{
-    opacity: 0;
-    transition: visibility 0s, opacity 0.5s linear;
-    visibility: hidden;
-    font-size: 1em;
+
+.game-button span{
+    display: inline-block;
+    position: relative;
+    transition: 0.6s;
 }
 
-.game-button:hover + .game-presentation{
-    visibility: initial;
+.game-button:hover span{
+    padding-right: 20px;
+}
+
+
+.game-button span:after{
+    content: '\00bb';
+    position: absolute;
+    opacity: 0;
+}
+
+
+.game-button:hover span:after{
+    opacity: 1;
+    right: 0;
+}
+
+
+.game-button:hover{
     opacity: 1;
 }
 
