--- a/games/find-the-button/find-the-button.css
+++ b/games/find-the-button/find-the-button.css
@@ -1,22 +1,17 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,600&display=swap');
-
 *{
     margin: 0;
     padding: 0;
-    font-family: 'Montserrat', sans-serif;
+    font-family: Verdana, sans-serif;
+    background-color: #f6f4f2;
 }
-
-body{
-    background-color: azure;
-}
-
 
 /* Style de la zone textuelle du haut */
 
 header{
     padding-top: 0.8%;
     padding-bottom: 1.6%;
-    background: #c0dbff;
+    background-color: #f6f4f2;
+    color: #006e81;
 }
 
 p{
@@ -63,7 +58,8 @@ main{
 /* Style du footer */
 
 footer{
-    background: #c0dbff;
+    background-color: #f6f4f2;
+    color: #006e81;
     width: 100%;
     position: absolute;
     bottom: 0;
