--- a/index.css
+++ b/index.css
@@ -3,15 +3,16 @@
 *{
     margin: 0;
     padding: 0;
-    font-family: Cochin, sans-serif;
+    font-family: Verdana, sans-serif;
 }
 
 
 /* Style titre + présentation */
 
 header{
+    background-color: #f6f4f2;
+    color: #006e81;
     padding-top: 2%;
-    background: #c0dbff;
 }
 
 #presentation{
@@ -32,19 +33,20 @@ h1{
 /* Style appliqué aux boutons de jeu + au footer */
 
 .games{
+    background-color: #f6f4f2;
     height: 600px;
     display: flex;
     flex-wrap: nowrap;
     overflow: auto;
-    margin-top: 20px;
 }
 
 
 /* Style sur les boutons de jeu */
 
 .game{
+    background-color: #425664;
+    color: white;
     flex: 0 0 auto;
-    background-color: #e9e9e9;
     width: 400px;
     height: 500px;
     margin: 20px;
@@ -79,11 +81,11 @@ h1{
     font-size: 24px;
     padding: 16px 30px;
     text-decoration: none;
-    color: white;
-    background-color: #555555;
+    color: #006e81;
+    background-color: #f6f4f2;
     transition: all 0.6s;
     cursor: pointer;
-    opacity: 0.7;
+    opacity: 0.8;
 }
 
 
@@ -119,7 +121,7 @@ h1{
 /* Style du footer */
 
 footer{
-    background: #c0dbff;
+    background-color: #f6f4f2;
     width: 100%;
     position: absolute;
     bottom: 0;
@@ -139,7 +141,7 @@ a{
 }
 
 a:link {
-    color: #004585;
+    color: #006e81;
 }
 
 a:visited {
