--- a/form.css
+++ b/form.css
@@ -16,6 +16,7 @@ body
 
 h1
 {
+    color: #006e81;
     margin-top: 100px;
     font-size: 40px;
     text-align: center;
@@ -86,6 +87,11 @@ td
 {
     text-align: center;
     padding: 7px;
+    color: #006e81;
+}
+
+th{
+    color: #006e81;
 }
 
 
