--- a/index.css
+++ b/index.css
@@ -123,7 +123,6 @@ h1{
 footer{
     background-color: #f6f4f2;
     width: 100%;
-    position: absolute;
     bottom: 0;
 }
 
@@ -146,4 +145,68 @@ a:link {
 
 a:visited {
     color: #006e81;
+}
+
+main{
+    background-color: #f6f4f2;
+    padding: 50px;
+}
+
+main div{
+    max-width: 1030px;
+    margin: 0 auto;
+    background-color: white;
+    box-shadow: 0 10px 20px 0 rgba(0,0,0,.05);
+}
+
+main h1{
+    padding: 20px;
+    font-size: 50px;
+    color: #006e81;
+}
+
+.game-suggestion-button-parent{
+    text-align: center;
+}
+
+
+.game-suggestion-button{
+    margin: 20px;
+    font-size: 24px;
+    padding: 16px 30px;
+    text-decoration: none;
+    background-color: #006e81;
+    color: white;
+    transition: all 0.6s;
+    cursor: pointer;
+    opacity: 0.8;
+}
+
+
+.game-suggestion-button span{
+    display: inline-block;
+    position: relative;
+    transition: 0.6s;
+}
+
+.game-suggestion-button:hover span{
+    padding-right: 20px;
+}
+
+
+.game-suggestion-button span:after{
+    content: '\00bb';
+    position: absolute;
+    opacity: 0;
+}
+
+
+.game-suggestion-button:hover span:after{
+    opacity: 1;
+    right: 0;
+}
+
+
+.game-suggestion-button:hover{
+    opacity: 1;
 }
