--- a/games/speed-typing/speed-typing.css
+++ b/games/speed-typing/speed-typing.css
@@ -1,14 +1,42 @@
 *
 {
-    font-family: Avenir, sans-serif;
+    font-family: Verdana, sans-serif;
+}
+
+
+body{
+    background-color: #f6f4f2;
+}
+
+
+header{
+    background-color: #f6f4f2;
+    padding: 50px;
+}
+
+header div{
+    max-width: 1030px;
+    margin: 0 auto;
+    background-color: white;
+    box-shadow: 0 10px 20px 0 rgba(0,0,0,.05);
+    padding: 5px;
+}
+
+header h1, header p{
+    color: #006e81;
 }
 
 
 h1
 {
-    margin-top: 100px;
     font-size: 40px;
     text-align: center;
+    color: #006e81;
+}
+
+
+main{
+    background-color: #f6f4f2;
 }
 
 
@@ -16,6 +44,7 @@ form, p
 {
     text-align: center;
     font-size: 20px;
+    color: #006e81;
 }
 
 
@@ -24,37 +53,18 @@ textarea
     border: solid 2px gray;
 }
 
-
-#submit-button
+button
 {
-    border-radius: 50%;
-    background: linear-gradient(to bottom right,  rgba(59,255,206,1) , rgba(137,125,242,1));
+    background-color: rgb(247, 247, 247);
+    box-shadow: 1px 1px 2px rgb(100, 100, 100);
     border: none;
-    padding: 20px;
-    margin: 20px;
-    color: white;
-    font-size: 20px;
-    opacity: 1;
-    transition: 0.6s;
+    border-radius: 5%;
+    padding: 5px;
+    text-transform: uppercase;
 }
 
 
-#submit-button:hover
+button:hover
 {
-    opacity: 0.7;
-}
-
-
-footer
-{
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-}
-
-
-nav ul li {
-    flex: 1 1 auto;
-    text-align: center;
-    position: relative;
+    background-color: rgb(158, 158, 158);
 }
