--- a/about.css
+++ b/about.css
@@ -8,6 +8,7 @@
 
 body{
     background-color: #f6f4f2;
+    padding-bottom: 20px;
 }
 
 h1{
@@ -24,36 +25,56 @@ img{
 
 main{
     margin-top: 50px;
-    position: relative;
 }
 
-main .member-1-picture, main .member-1-presentation{
+.member-1-parent, .member-2-parent{
+    background-color: #f6f4f2;
+    padding: 50px;
+}
+
+.member-1-picture, .member-1-presentation, .member-2-picture, .member-2-presentation{
     display: inline-block;
 }
 
-main .member-1-picture{
+.member-1-picture{
     float: left;
 }
 
-main .member-1-presentation{
-    margin-left: 130px;
-    max-width: 900px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    -ms-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
+.member-2-picture{
+    float: right;
+}
+
+.member-1-presentation{
+    margin-top: 40px;
+    margin-left: 100px;
+    max-width: 600px;
     color: #006e81;
 }
 
-main .member-1{
+.member-2-presentation{
+    margin-top: 40px;
+    margin-left: 100px;
+    max-width: 600px;
+    color: #006e81;
+}
+
+.member-1{
     padding: 10px;
     max-width: 1000px;
     min-height: 250px;
     margin: 0 auto;
     background-color: white;
     box-shadow: 0 10px 20px 0 rgba(0,0,0,.05);
-    vertical-align: center;
+}
+
+.member-2{
+    position: relative;
+    padding: 10px;
+    max-width: 1000px;
+    min-height: 250px;
+    margin: 0 auto;
+    background-color: white;
+    box-shadow: 0 10px 20px 0 rgba(0,0,0,.05);
 }
 
 /* Style du footer */
