--- a/games/speed-typing/speed-typing.css
+++ b/games/speed-typing/speed-typing.css
@@ -1,5 +1,7 @@
 *
 {
+    margin: 0;
+    padding: 0;
     font-family: Verdana, sans-serif;
 }
 
@@ -10,13 +12,12 @@ body{
 
 
 header{
-    background-color: #f6f4f2;
     padding: 50px;
 }
 
 header div{
-    max-width: 800px;
-    margin: 0 auto;
+    max-width: 500px;
+    margin: 0 auto 5px;
     background-color: white;
     box-shadow: 0 10px 20px 0 rgba(0,0,0,.05);
     padding: 5px;
@@ -32,6 +33,11 @@ h1
     font-size: 40px;
     text-align: center;
     color: #006e81;
+}
+
+
+#chosen-text, main p{
+    margin-top: 50px;
 }
 
 
