--- a/games/speed-typing/speed-typing.css
+++ b/games/speed-typing/speed-typing.css
@@ -104,3 +104,12 @@ a:link {
 a:visited {
     color: #006e81;
 }
+
+#results{
+    font-size: 3em;
+    position: fixed;
+    left: 50%;
+    top: 50%;
+    padding: 2vh 2vw 2vh 2vw;
+    transform: translate(-50%, -50%);
+}
