--- a/games/speed-typing/speed-typing.css
+++ b/games/speed-typing/speed-typing.css
@@ -113,3 +113,27 @@ a:visited {
     padding: 2vh 2vw 2vh 2vw;
     transform: translate(-50%, -50%);
 }
+
+#retry{
+    display: none;
+    position: fixed;
+    left: 50%;
+    top: 60%;
+    transform: translate(-50%, -50%);
+    cursor: pointer;
+    font-size: 24px;
+    padding: 16px 30px;
+    text-decoration: none;
+}
+
+#retry-same-text{
+    display: none;
+    position: fixed;
+    left: 50%;
+    top: 70%;
+    transform: translate(-50%, -50%);
+    cursor: pointer;
+    font-size: 24px;
+    padding: 16px 30px;
+    text-decoration: none;
+}
