--- a/form.css
+++ b/form.css
@@ -1,57 +1,56 @@
-*
-{
+* {
     margin: 0;
     padding: 0;
     font-family: Verdana, sans-serif;
 }
 
 
-body
-{
-    background-color: #F5F5F5;
+body {
+    background-color: #f6f4f2;
+    text-align: center;
+}
+
+
+header, main {
     margin-left: 10px;
     margin-right: 10px;
 }
 
 
-h1
-{
+h1, td, th, a:link, a:visited {
     color: #006e81;
-    margin-top: 100px;
-    font-size: 40px;
-    text-align: center;
 }
 
 
-form
-{
-    display: flex;
-    flex-flow: column wrap;
+h1 {
+    margin-top: 100px;
+    font-size: 40px;
+}
+
+
+form {
     min-width: 250px;
     padding: 10px;
     background-color: #D3D3D3;
     box-shadow: 2px 2px 3px rgb(100, 100, 100);
-    margin-bottom: 30px;
     margin-top: 20px;
+    margin-bottom: 30px;
 }
 
 
-.parent
-{
+#input-parent {
     display: flex;
     flex-flow: row wrap;
 }
 
 
-.parent > *
-{
+#input-parent > * {
     flex: 1;
     flex-wrap: wrap;
 }
 
 
-input
-{
+input {
     border: none;
     border-bottom: 1px solid rgb(158, 158, 158);
     padding: 3px;
@@ -68,6 +67,7 @@ input:invalid, input:placeholder-shown
 
 button
 {
+    width: 50px;
     background-color: rgb(247, 247, 247);
     box-shadow: 1px 1px 2px rgb(100, 100, 100);
     border: none;
@@ -77,32 +77,22 @@ button
 }
 
 
-button:hover
-{
+button:hover {
     background-color: rgb(158, 158, 158);
 }
 
 
-td
-{
-    text-align: center;
+td {
     padding: 7px;
-    color: #006e81;
-}
-
-th{
-    color: #006e81;
 }
 
 
-tr
-{
+tr {
     border-top: solid black 1px;
 }
 
 
-main
-{
+main {
     display: flex;
     flex-flow: column nowrap;
     min-width: 500px;
@@ -112,36 +102,25 @@ main
     margin-bottom: 30px;
 }
 
-.parent{
-    text-align: center;
-}
 
-/* Style du footer */
-
-footer{
+footer {
     background-color: #f6f4f2;
     width: 100%;
     bottom: 0;
     position: fixed;
 }
 
-footer nav{
+
+footer nav {
     padding: 1.2%;
     justify-content: space-around;
     display: flex;
     flex-flow: row wrap;
 }
 
-a{
+
+a {
     outline: none;
     text-decoration: none;
     padding: 2px 1px 0;
-}
-
-a:link {
-    color: #006e81;
-}
-
-a:visited {
-    color: #006e81;
 }
