--- a/about.css
+++ b/about.css
@@ -1,107 +1,103 @@
-/* Styles généraux */
-
-*{
+* {
     margin: 0;
     padding: 0;
     font-family: Verdana, sans-serif;
 }
 
-body{
+
+body {
+    padding-bottom: 100px;
+    color: #006e81;
     background-color: #f6f4f2;
-    padding-bottom: 20px;
 }
 
-h1{
+h1 {
     margin-top: 20px;
-    color: #006e81;
     font-size: 2.2em;
     text-align: center;
 }
 
-img{
+
+img {
     max-height: 250px;
     max-width: 250px;
 }
 
-main{
+
+main {
     margin-top: 50px;
 }
 
-.member-1-parent, .member-2-parent{
-    background-color: #f6f4f2;
-    padding: 50px;
-}
 
-.member-1-picture, .member-1-presentation, .member-2-picture, .member-2-presentation{
+#member-1-picture, #member-2-picture, .member-presentation {
     display: inline-block;
 }
 
-.member-1-picture{
+
+#member-1-picture {
     float: left;
 }
 
-.member-2-picture{
+
+#member-2-picture {
     float: right;
 }
 
-.member-1-presentation{
+
+.member-presentation {
     margin-top: 40px;
     margin-left: 100px;
     max-width: 600px;
-    color: #006e81;
 }
 
-.member-2-presentation{
-    margin-top: 40px;
-    margin-left: 100px;
-    max-width: 600px;
-    color: #006e81;
-}
 
-.member-1{
-    padding: 10px;
+#member-1, #member-2 {
     max-width: 1000px;
     min-height: 250px;
-    margin: 0 auto;
     background-color: white;
     box-shadow: 0 10px 20px 0 rgba(0,0,0,.05);
+    padding: 10px;
 }
 
-.member-2{
+
+#member-1 {
+    margin: 0 auto;
+}
+
+
+#member-2 {
     position: relative;
-    padding: 10px;
-    max-width: 1000px;
-    min-height: 250px;
-    margin: 0 auto;
-    background-color: white;
-    box-shadow: 0 10px 20px 0 rgba(0,0,0,.05);
+    margin: 100px auto 0;
 }
 
-/* Style du footer */
 
-footer{
+footer {
     background-color: #f6f4f2;
     width: 100%;
     bottom: 0;
     position: fixed;
 }
 
-footer nav{
+
+footer nav {
     padding: 1.2%;
     justify-content: space-around;
     display: flex;
     flex-flow: row wrap;
 }
 
-a{
+
+a {
     outline: none;
     text-decoration: none;
     padding: 2px 1px 0;
 }
 
+
 a:link {
     color: #006e81;
 }
+
 
 a:visited {
     color: #006e81;
