change box shadow

--- a/index.css
+++ b/index.css
@@ -156,7 +156,7 @@ a:visited {
     width: 650px;
     margin: 0 auto;
     background-color: white;
-    box-shadow: 0 10px 20px 0 rgba(0,0,0,.05);
+    box-shadow: 0 10px 20px rgba(128,128,128,.3);
 }
 
 
