--- a/games/find-the-button/find-the-button.css
+++ b/games/find-the-button/find-the-button.css
@@ -16,9 +16,9 @@ header{
 header div{
     max-width: 800px;
     background-color: white;
-    box-shadow: 0 10px 20px 0 rgba(0,0,0,.05);
+    box-shadow: 0 10px 20px rgba(128,128,128,.3);
     padding: 5px;
-    margin: 0 auto 5px;
+    margin: 0 auto 10px;
 }
 
 header div h1, header div p{
@@ -26,13 +26,14 @@ header div h1, header div p{
     background-color: white;
 }
 
-h1{
+h1 {
     font-size: 40px;
     text-align: center;
     color: #006e81;
 }
 
-p{
+p {
+    margin-top: 20px;
     padding-top: 0.8%;
     text-align: center;
 }
