--- a/games/find-the-button/find-the-button.css
+++ b/games/find-the-button/find-the-button.css
@@ -50,6 +50,19 @@ p {
     transform: translate(-50%, -50%);
 }
 
+
+#retry {
+    display: none;
+    position: fixed;
+    left: 50%;
+    top: 80%;
+    transform: translate(-50%, -50%);
+    cursor: pointer;
+    font-size: 24px;
+    padding: 16px 30px;
+    text-decoration: none;
+}
+
 /* Style du bouton */
 
 main{
@@ -72,7 +85,6 @@ main{
     background-color: #6585af;
 }
 
-/* Style du footer */
 
 footer{
     background-color: #f6f4f2;
