--- a/index.css
+++ b/index.css
@@ -96,12 +96,12 @@ h1 {
 
 
 .game-button:hover span {
-    padding-right: 20px;
+    padding-left: 20px;
 }
 
 
 .game-button span:after {
-    content: '\00bb';
+    content: '\003E';
     position: absolute;
     opacity: 0;
 }
@@ -109,7 +109,7 @@ h1 {
 
 .game-button:hover span:after {
     opacity: 1;
-    right: 0;
+    left: 0;
 }
 
 
@@ -188,12 +188,12 @@ a:visited {
 
 
 #game-suggestion-button:hover span {
-    padding-right: 20px;
+    padding-left: 20px;
 }
 
 
 #game-suggestion-button span:after {
-    content: '\00bb';
+    content: '\003E';
     position: absolute;
     opacity: 0;
 }
@@ -201,7 +201,7 @@ a:visited {
 
 #game-suggestion-button:hover span:after {
     opacity: 1;
-    right: 0;
+    left: 0;
 }
 
 
