--- a/about.css
+++ b/about.css
@@ -19,7 +19,7 @@ h1 {
 
 
 img {
-    max-height: 250px;
+    max-height: 200px;
     max-width: 250px;
 }
 
@@ -53,7 +53,7 @@ main {
 
 #member-1, #member-2 {
     max-width: 1000px;
-    min-height: 250px;
+    min-height: 200px;
     background-color: white;
     box-shadow: 0 10px 20px 0 rgba(0,0,0,.05);
     padding: 10px;
@@ -68,6 +68,13 @@ main {
 #member-2 {
     position: relative;
     margin: 100px auto 0;
+}
+
+
+.member-name {
+    margin-top: 20px;
+    margin-right: 20px;
+    text-align: right;
 }
 
 
