--- a/index.css
+++ b/index.css
@@ -153,7 +153,7 @@ a:visited {
 
 #suggestions-presentation {
     text-align: center;
-    width: 650px;
+    max-width: 650px;
     margin: 0 auto;
     background-color: white;
     box-shadow: 0 10px 20px rgba(128,128,128,.3);
